@@ -14,46 +14,61 @@ import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 import org.springframework.data.util.Streamable;
 import org.testcontainers.shaded.com.google.common.io.Resources;
+import uk.gov.hmcts.reform.idam.client.models.UserInfo;
 import uk.gov.hmcts.reform.jps.components.BaseEvaluateDuplicate;
-import uk.gov.hmcts.reform.jps.components.EvaluateDuplicate;
-import uk.gov.hmcts.reform.jps.components.EvaluateMatchingDuration;
-import uk.gov.hmcts.reform.jps.components.EvaluateOverlapDuration;
+import uk.gov.hmcts.reform.jps.data.SecurityUtils;
+import uk.gov.hmcts.reform.jps.domain.Service;
 import uk.gov.hmcts.reform.jps.domain.SittingRecordDuplicateProjection;
 import uk.gov.hmcts.reform.jps.domain.SittingRecordDuplicateProjection.SittingRecordDuplicateCheckFields;
+import uk.gov.hmcts.reform.jps.domain.SittingRecord_;
+import uk.gov.hmcts.reform.jps.domain.StatusHistory;
+import uk.gov.hmcts.reform.jps.exceptions.ConflictException;
+import uk.gov.hmcts.reform.jps.exceptions.ForbiddenException;
 import uk.gov.hmcts.reform.jps.model.SittingRecordWrapper;
+import uk.gov.hmcts.reform.jps.model.StatusId;
 import uk.gov.hmcts.reform.jps.model.in.RecordSittingRecordRequest;
 import uk.gov.hmcts.reform.jps.model.in.SittingRecordRequest;
 import uk.gov.hmcts.reform.jps.model.in.SittingRecordSearchRequest;
 import uk.gov.hmcts.reform.jps.model.in.SubmitSittingRecordRequest;
 import uk.gov.hmcts.reform.jps.model.out.SittingRecord;
+import uk.gov.hmcts.reform.jps.refdata.location.model.CourtVenue;
 import uk.gov.hmcts.reform.jps.repository.SittingRecordRepository;
+import uk.gov.hmcts.reform.jps.services.refdata.LocationService;
 
 import java.io.IOException;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.Month;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.LongStream;
+import java.util.stream.Stream;
 
 import static java.time.LocalDate.of;
 import static java.time.LocalDateTime.now;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.tuple;
+import static org.junit.Assert.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isA;
+import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.testcontainers.shaded.com.google.common.base.Charsets.UTF_8;
 import static org.testcontainers.shaded.com.google.common.io.Resources.getResource;
-import static uk.gov.hmcts.reform.jps.model.Duration.AM;
-import static uk.gov.hmcts.reform.jps.model.Duration.PM;
+import static uk.gov.hmcts.reform.jps.model.ErrorCode.INVALID_LOCATION;
+import static uk.gov.hmcts.reform.jps.model.ErrorCode.POTENTIAL_DUPLICATE_RECORD;
+import static uk.gov.hmcts.reform.jps.model.StatusId.DELETED;
 import static uk.gov.hmcts.reform.jps.model.StatusId.RECORDED;
 import static uk.gov.hmcts.reform.jps.model.StatusId.SUBMITTED;
 
@@ -63,20 +78,25 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
 
     private static final String USER_ID = UUID.randomUUID().toString();
     private static final String UPDATED_BY_USER_ID = UUID.randomUUID().toString();
-    private static final LocalDateTime CURRENT_DATE_TIME = now();
+    private static final Long ID = 1L;
+
+    public static final String HMCTS_SERVICE_CODE = "test";
+    public static final String EPIMMS_ID = "epimms001";
+    public static final String LOCATION = "Sutton Social Security";
 
     @Mock
     private SittingRecordRepository sittingRecordRepository;
+    @Mock
+    private LocationService locationService;
+    @Mock
+    private ServiceService serviceService;
+    @Mock
+    private DuplicateCheckerService duplicateCheckerService;
+    @Mock
+    private SecurityUtils securityUtils;
 
     @Mock
     private StatusHistoryService statusHistoryService;
-
-    @Mock
-    private EvaluateDuplicate evaluateDuplicate;
-    @Mock
-    private EvaluateMatchingDuration evaluateMatchingDuration;
-    @Mock
-    private EvaluateOverlapDuration evaluateOverlapDuration;
 
     private final ObjectMapper objectMapper = new ObjectMapper();
 
@@ -91,17 +111,23 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
     @BeforeEach
     void setUp() {
         objectMapper.registerModule(new JavaTimeModule());
+        when(locationService.getVenueName(HMCTS_SERVICE_CODE, EPIMMS_ID))
+            .thenReturn(LOCATION);
+        when(serviceService.findService(HMCTS_SERVICE_CODE))
+            .thenReturn(Optional.of(Service.builder()
+                                        .accountCenterCode("123")
+                                        .build()));
     }
 
     @Test
     void shouldReturnTotalRecordCount() {
         when(sittingRecordRepository.totalRecords(isA(SittingRecordSearchRequest.class),
                                                   isA(String.class)))
-            .thenReturn(10);
+            .thenReturn(10L);
 
-        int totalRecordCount = sittingRecordService.getTotalRecordCount(
+        long totalRecordCount = sittingRecordService.getTotalRecordCount(
             SittingRecordSearchRequest.builder().build(),
-            "test"
+            HMCTS_SERVICE_CODE
         );
 
         assertThat(totalRecordCount)
@@ -113,61 +139,85 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
     void shouldReturnSittingRecordsWhenRecordPresentInDb() {
         when(sittingRecordRepository.find(isA(SittingRecordSearchRequest.class),
                                                   isA(String.class)))
-            .thenReturn(getDbSittingRecords(2));
+            .thenReturn(getDbSittingRecords(2).stream());
+
+        when(locationService.getCourtVenues(anyString()))
+            .thenReturn(List.of(
+                CourtVenue.builder()
+                    .epimmsId("1")
+                    .regionId("1")
+                    .siteName("one")
+                    .build())
+            );
+        when(serviceService.findService(anyString()))
+            .thenReturn(Optional.of(Service.builder()
+                    .accountCenterCode("123")
+                        .build())
+            );
 
         List<SittingRecord> sittingRecords = sittingRecordService.getSittingRecords(
             SittingRecordSearchRequest.builder().build(),
-            "test"
+            HMCTS_SERVICE_CODE
         );
 
-        assertThat(sittingRecords)
-            .hasSize(2)
-            .isEqualTo(getDomainSittingRecords(2));
-    }
+        assertThat(sittingRecords).hasSize(2);
 
-
-    @Test
-    void shouldReturnSittingRecordsWhenRecordPresentInDbWithAmNull() {
-        List<uk.gov.hmcts.reform.jps.domain.SittingRecord> dbSittingRecords = getDbSittingRecords(1);
-        dbSittingRecords.get(0).setAm(false);
-
-        when(sittingRecordRepository.find(isA(SittingRecordSearchRequest.class),
-                                          isA(String.class)))
-            .thenReturn(dbSittingRecords);
-
-        List<SittingRecord> sittingRecords = sittingRecordService.getSittingRecords(
-            SittingRecordSearchRequest.builder().build(),
-            "test"
-        );
-
-        List<SittingRecord> domainSittingRecords = getDomainSittingRecords(1);
-        domainSittingRecords.get(0).setAm(null);
-
-        assertThat(sittingRecords)
-            .hasSize(1)
-            .isEqualTo(domainSittingRecords);
+        assertThat(sittingRecords.get(0)).isEqualTo(getDomainSittingRecords(2).get(0));
+        assertThat(sittingRecords.get(1)).isEqualTo(getDomainSittingRecords(2).get(1));
+        verify(locationService).getCourtVenues(anyString());
+        verify(serviceService).findService(anyString());
     }
 
     @Test
-    void shouldReturnSittingRecordsWhenRecordPresentInDbWithPmNull() {
-        List<uk.gov.hmcts.reform.jps.domain.SittingRecord> dbSittingRecords = getDbSittingRecords(1);
-        dbSittingRecords.get(0).setPm(false);
-
-        when(sittingRecordRepository.find(isA(SittingRecordSearchRequest.class),
-                                          isA(String.class)))
-            .thenReturn(dbSittingRecords);
-
-        List<SittingRecord> sittingRecords = sittingRecordService.getSittingRecords(
-            SittingRecordSearchRequest.builder().build(),
-            "test"
+    void shouldSaveSittingRecordsWhenRequestIsValid() throws IOException {
+        String requestJson = Resources.toString(getResource("recordSittingRecords.json"), UTF_8);
+        RecordSittingRecordRequest recordSittingRecordRequest = objectMapper.readValue(
+            requestJson,
+            RecordSittingRecordRequest.class
         );
 
-        List<SittingRecord> domainSittingRecords = getDomainSittingRecords(1);
-        domainSittingRecords.get(0).setPm(null);
+        List<SittingRecordWrapper> sittingRecordWrappers =
+            recordSittingRecordRequest.getRecordedSittingRecords().stream()
+                .map(SittingRecordWrapper::new)
+                .toList();
 
-        assertThat(sittingRecords)
-            .hasSize(1)
-            .isEqualTo(domainSittingRecords);
+        sittingRecordWrappers
+            .forEach(sittingRecordWrapper -> sittingRecordWrapper.setRegionId("1"));
+
+        sittingRecordService.saveSittingRecords(
+            HMCTS_SERVICE_CODE,
+            sittingRecordWrappers,
+            recordSittingRecordRequest.getRecordedByName(),
+            recordSittingRecordRequest.getRecordedByIdamId());
+
+        verify(sittingRecordRepository, times(3))
+            .save(sittingRecordArgumentCaptor.capture());
+
+        List<uk.gov.hmcts.reform.jps.domain.SittingRecord> sittingRecords = sittingRecordArgumentCaptor.getAllValues();
+        assertThat(sittingRecords).extracting(SittingRecord_.SITTING_DATE, SittingRecord_.STATUS_ID,
+                                              SittingRecord_.EPIMMS_ID, SittingRecord_.HMCTS_SERVICE_ID,
+                                              SittingRecord_.PERSONAL_CODE, SittingRecord_.CONTRACT_TYPE_ID,
+                                              SittingRecord_.JUDGE_ROLE_TYPE_ID, SittingRecord_.AM, SittingRecord_.PM)
+                .contains(
+                    tuple(of(2022, Month.MAY, 11), RECORDED, "852649",
+                          HMCTS_SERVICE_CODE, "4918500", 1L, "Tester", false, true),
+                    tuple(of(2023, Month.APRIL, 10), RECORDED, "852649",
+                          HMCTS_SERVICE_CODE, "4918179", 1L, "Judge", true, false),
+                    tuple(of(2023, Month.MARCH, 9), RECORDED, "852649",
+                          HMCTS_SERVICE_CODE, "4918180", 1L, "Judge", true, true)
+        );
+
+        assertThat(sittingRecords).flatExtracting(uk.gov.hmcts.reform.jps.domain.SittingRecord::getStatusHistories)
+            .extracting("statusId", "changedByUserId", "changedByName")
+            .contains(
+                tuple(RECORDED, "d139a314-eb40-45f4-9e7a-9e13f143cc3a", "Recorder"),
+                tuple(RECORDED, "d139a314-eb40-45f4-9e7a-9e13f143cc3a", "Recorder"),
+                tuple(RECORDED, "d139a314-eb40-45f4-9e7a-9e13f143cc3a", "Recorder")
+        );
+
+        assertThat(sittingRecords).describedAs("Created date assertion")
+            .flatExtracting(uk.gov.hmcts.reform.jps.domain.SittingRecord::getStatusHistories)
+            .allMatch(m -> LocalDateTime.now().minusMinutes(5).isBefore(m.getChangedDateTime()));
     }
 
     private List<uk.gov.hmcts.reform.jps.domain.SittingRecord> getDbSittingRecords(int limit) {
@@ -184,78 +234,205 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
                 .judgeRoleTypeId("HighCourt")
                 .am(true)
                 .pm(true)
-                .createdDateTime(CURRENT_DATE_TIME.minusDays(2))
-                .createdByUserId(USER_ID)
-                .changeByUserId(UPDATED_BY_USER_ID)
-                .changeDateTime(CURRENT_DATE_TIME.minusDays(1))
                 .build())
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<SittingRecord> getDomainSittingRecords(int limit) {
         return LongStream.range(1, limit + 1)
             .mapToObj(count -> SittingRecord.builder()
-                .sittingRecordId(count)
-                .sittingDate(LocalDate.now().minusDays(2))
-                .statusId(RECORDED)
-                .regionId("1")
-                .epimmsId("epims001")
-                .hmctsServiceId("sscs")
-                .personalCode("001")
-                .contractTypeId(count)
-                .judgeRoleTypeId("HighCourt")
-                .am(AM.name())
-                .pm(PM.name())
-                .createdByUserId(USER_ID)
-                .createdDateTime(CURRENT_DATE_TIME.minusDays(2))
-                .changeByUserId(UPDATED_BY_USER_ID)
-                .changeDateTime(CURRENT_DATE_TIME.minusDays(1))
-                .build())
+                    .sittingRecordId(count)
+                    .sittingDate(LocalDate.now().minusDays(2))
+                    .statusId(RECORDED)
+                    .regionId("1")
+                    .epimmsId("epims001")
+                    .hmctsServiceId("sscs")
+                    .personalCode("001")
+                    .contractTypeId(count)
+                    .judgeRoleTypeId("HighCourt")
+                    .am(true)
+                    .pm(true)
+                    .build())
             .collect(Collectors.toList());
     }
 
-    @Test
-    void shouldSaveSittingRecordsWhenRequestIsValid() throws IOException {
-        String requestJson = Resources.toString(getResource("recordSittingRecords.json"), UTF_8);
-        RecordSittingRecordRequest recordSittingRecordRequest = objectMapper.readValue(
-            requestJson,
-            RecordSittingRecordRequest.class
-        );
 
-        List<SittingRecordWrapper> sittingRecordWrappers =
-            recordSittingRecordRequest.getRecordedSittingRecords().stream()
-            .map(SittingRecordWrapper::new)
-            .toList();
+    private uk.gov.hmcts.reform.jps.domain.SittingRecord deleteTestSetUp(String changeById, StatusId state) {
+        StatusHistory statusHistory = StatusHistory.builder()
+            .statusId(state)
+            .changedDateTime(now())
+            .changedByUserId(changeById)
+            .changedByName("John Smith")
+            .build();
 
-        sittingRecordService.saveSittingRecords("test",
-                                                sittingRecordWrappers,
-                                                recordSittingRecordRequest.getRecordedByName(),
-                                                recordSittingRecordRequest.getRecordedByIdamId());
+        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord
+            = uk.gov.hmcts.reform.jps.domain.SittingRecord.builder()
+            .id(ID)
+            .sittingDate(LocalDate.now().minusDays(2))
+            .statusId(state)
+            .regionId("1")
+            .epimmsId(EPIMMS_ID)
+            .hmctsServiceId("sscs")
+            .personalCode("001")
+            .contractTypeId(1L)
+            .judgeRoleTypeId("HighCourt")
+            .am(true)
+            .pm(true)
+            .build();
 
-        verify(sittingRecordRepository, times(3))
-            .save(sittingRecordArgumentCaptor.capture());
+        sittingRecord.addStatusHistory(statusHistory);
 
-        List<uk.gov.hmcts.reform.jps.domain.SittingRecord> sittingRecords = sittingRecordArgumentCaptor.getAllValues();
-        assertThat(sittingRecords).extracting("sittingDate", "statusId", "epimmsId", "hmctsServiceId",
-                                              "personalCode", "contractTypeId", "judgeRoleTypeId", "am", "pm")
-                .contains(
-                    tuple(of(2023, Month.MAY, 11), RECORDED, "852649", "test", "4918178", 1L, "Judge", false, true),
-                    tuple(of(2023, Month.APRIL, 10), RECORDED, "852649", "test", "4918178", 1L, "Judge", true, false),
-                    tuple(of(2023, Month.MARCH, 9), RECORDED, "852649", "test", "4918178", 1L, "Judge", true, true)
-        );
-
-        assertThat(sittingRecords).flatExtracting(uk.gov.hmcts.reform.jps.domain.SittingRecord::getStatusHistories)
-            .extracting("statusId", "changeByUserId", "changeByName")
-            .contains(
-                tuple(RECORDED, "d139a314-eb40-45f4-9e7a-9e13f143cc3a", "Recorder"),
-                tuple(RECORDED, "d139a314-eb40-45f4-9e7a-9e13f143cc3a", "Recorder"),
-                tuple(RECORDED, "d139a314-eb40-45f4-9e7a-9e13f143cc3a", "Recorder")
-        );
-
-        assertThat(sittingRecords).describedAs("Created date assertion")
-            .flatExtracting(uk.gov.hmcts.reform.jps.domain.SittingRecord::getStatusHistories)
-            .allMatch(m -> LocalDateTime.now().minusMinutes(5).isBefore(m.getChangeDateTime()));
+        return sittingRecord;
     }
+
+    @Test
+    void shouldDeleteRecordRecorder() {
+        UserInfo userInfo =  UserInfo.builder().roles(List.of("jps-recorder")).uid(USER_ID).build();
+        given(securityUtils.getUserInfo()).willReturn(userInfo);
+
+        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(USER_ID, RECORDED);
+
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED))
+                .thenReturn(Optional.of(sittingRecord));
+        when(sittingRecordRepository.findRecorderSittingRecord(ID, DELETED))
+                .thenReturn(Optional.of(sittingRecord));
+
+        sittingRecordService.deleteSittingRecord(sittingRecord.getId());
+
+        Optional<StatusHistory> optionalStatusHistory
+            = sittingRecord.getStatusHistories().stream().max(Comparator.comparing(
+            StatusHistory::getChangedDateTime));
+
+        assertThat(optionalStatusHistory)
+            .map(StatusHistory::getStatusId)
+            .hasValue(DELETED);
+
+    }
+
+    @Test
+    void shouldDeleteRecordSubmitter() {
+        UserInfo userInfo = UserInfo.builder().roles(List.of("jps-submitter")).uid(USER_ID).build();
+        given(securityUtils.getUserInfo()).willReturn(userInfo);
+
+        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(
+            UPDATED_BY_USER_ID,
+            RECORDED
+        );
+
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED))
+                .thenReturn(Optional.of(sittingRecord));
+
+        sittingRecordService.deleteSittingRecord(sittingRecord.getId());
+
+        Optional<StatusHistory> optionalStatusHistory
+            = sittingRecord.getStatusHistories().stream().max(Comparator.comparing(
+            StatusHistory::getChangedDateTime));
+
+        assertThat(optionalStatusHistory)
+            .map(StatusHistory::getStatusId)
+            .hasValue(DELETED);
+    }
+
+    @Test
+    void shouldDeleteRecordAdmin() {
+        UserInfo userInfo = UserInfo.builder().roles(List.of("jps-admin")).uid(USER_ID).build();
+        given(securityUtils.getUserInfo()).willReturn(userInfo);
+
+        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(
+            UPDATED_BY_USER_ID,
+            SUBMITTED
+        );
+
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED))
+                .thenReturn(Optional.of(sittingRecord));
+
+        sittingRecordService.deleteSittingRecord(sittingRecord.getId());
+
+        Optional<StatusHistory> optionalStatusHistory
+            = sittingRecord.getStatusHistories().stream().max(Comparator.comparing(
+            StatusHistory::getChangedDateTime));
+        assertThat(optionalStatusHistory)
+            .map(StatusHistory::getStatusId)
+            .hasValue(DELETED);
+    }
+
+    @Test
+    void differentRecorderID() {
+        UserInfo userInfo = UserInfo.builder().roles(List.of("jps-recorder")).uid(USER_ID).build();
+        given(securityUtils.getUserInfo()).willReturn(userInfo);
+
+        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord =
+            deleteTestSetUp(UPDATED_BY_USER_ID, RECORDED);
+
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED))
+                .thenReturn(Optional.of(sittingRecord));
+
+        Exception exception = assertThrows(ForbiddenException.class, () ->
+            sittingRecordService.deleteSittingRecord(ID)
+        );
+
+        Optional<StatusHistory> statusHistory = sittingRecord.getLatestStatusHistory();
+        assertThat(statusHistory)
+            .map(StatusHistory::getStatusId)
+            .hasValue(RECORDED);
+        assertThat(exception.getMessage())
+            .isEqualTo("User IDAM ID does not match the oldest Changed by IDAM ID ");
+    }
+
+    @Test
+    void wrongStateRecorder() {
+        UserInfo userInfo = UserInfo.builder().roles(List.of("jps-recorder")).uid(USER_ID).build();
+        given(securityUtils.getUserInfo()).willReturn(userInfo);
+
+        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(USER_ID, SUBMITTED);
+
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED))
+                .thenReturn(Optional.of(sittingRecord));
+
+        Long id = sittingRecord.getId();
+        Exception exception = assertThrows(ConflictException.class, () ->
+            sittingRecordService.deleteSittingRecord(id)
+        );
+        assertThat(exception.getMessage())
+            .isEqualTo("Sitting Record Status ID is in wrong state");
+    }
+
+    @Test
+    void wrongStateSubmitter() {
+        UserInfo userInfo = UserInfo.builder().roles(List.of("jps-submitter")).uid(USER_ID).build();
+        given(securityUtils.getUserInfo()).willReturn(userInfo);
+
+        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(USER_ID, SUBMITTED);
+
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED))
+                .thenReturn(Optional.of(sittingRecord));
+
+        Long id = sittingRecord.getId();
+        Exception exception = assertThrows(ConflictException.class, () ->
+            sittingRecordService.deleteSittingRecord(id)
+        );
+        assertThat(exception.getMessage())
+            .isEqualTo("Sitting Record Status ID is in wrong state");
+    }
+
+    @Test
+    void wrongStateAdmin() {
+        UserInfo userInfo = UserInfo.builder().roles(List.of("jps-admin")).uid(USER_ID).build();
+        given(securityUtils.getUserInfo()).willReturn(userInfo);
+
+        uk.gov.hmcts.reform.jps.domain.SittingRecord sittingRecord = deleteTestSetUp(USER_ID, RECORDED);
+
+        when(sittingRecordRepository.findRecorderSittingRecord(sittingRecord.getId(), DELETED))
+                .thenReturn(Optional.of(sittingRecord));
+
+        Long id = sittingRecord.getId();
+        Exception exception = assertThrows(ConflictException.class, () ->
+            sittingRecordService.deleteSittingRecord(id)
+        );
+        assertThat(exception.getMessage())
+            .isEqualTo("Sitting Record Status ID is in wrong state");
+    }
+
 
     @Test
     void shouldInvokeDuplicateCheckerWhenMatchingRecordsFoundInDb() throws IOException {
@@ -277,9 +454,10 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
             RECORDED
         );
 
-        when(sittingRecordRepository.findBySittingDateAndEpimmsIdAndPersonalCodeAndStatusIdNot(
-            any(), any(), any(), any())
+        when(sittingRecordRepository.findBySittingDateAndEpimmsIdAndPersonalCodeAndStatusIdNotIn(
+            any(), any(), any(), anyList())
         ).thenReturn(Streamable.of(List.of(sittingRecordDuplicateCheckFields)));
+
 
         List<SittingRecordWrapper> sittingRecordWrappers =
             recordSittingRecordRequest.getRecordedSittingRecords().stream()
@@ -288,7 +466,28 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
 
         sittingRecordService.checkDuplicateRecords(sittingRecordWrappers);
 
-        verify(evaluateDuplicate, times(3)).evaluate(any(), any());
+        verify(duplicateCheckerService, times(3)).evaluate(any(), any());
+    }
+
+    @Test
+    void shouldNotInvokeDuplicateCheckerWhenSittingRecordWrapperIsInValid() throws IOException {
+        String requestJson = Resources.toString(getResource("recordSittingRecords.json"), UTF_8);
+        RecordSittingRecordRequest recordSittingRecordRequest = objectMapper.readValue(
+            requestJson,
+            RecordSittingRecordRequest.class
+        );
+
+        List<SittingRecordWrapper> sittingRecordWrappers =
+            recordSittingRecordRequest.getRecordedSittingRecords().stream()
+                .map(sittingRecordRequest -> SittingRecordWrapper.builder()
+                    .sittingRecordRequest(sittingRecordRequest)
+                    .errorCode(INVALID_LOCATION)
+                    .build())
+                .toList();
+
+        sittingRecordService.checkDuplicateRecords(sittingRecordWrappers);
+
+        verify(duplicateCheckerService, never()).evaluate(any(), any());
     }
 
     @Test
@@ -301,8 +500,8 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
 
         List<SittingRecordDuplicateCheckFields> dbSittingRecordDuplicateCheckFields = Collections.emptyList();
 
-        when(sittingRecordRepository.findBySittingDateAndEpimmsIdAndPersonalCodeAndStatusIdNot(
-            any(), any(), any(), any())
+        when(sittingRecordRepository.findBySittingDateAndEpimmsIdAndPersonalCodeAndStatusIdNotIn(
+            any(), any(), any(), anyList())
         ).thenReturn(Streamable.of(dbSittingRecordDuplicateCheckFields));
 
         List<SittingRecordWrapper> sittingRecordWrappers =
@@ -312,7 +511,7 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
 
         sittingRecordService.checkDuplicateRecords(sittingRecordWrappers);
 
-        verify(evaluateDuplicate, never()).evaluate(any(), any());
+        verify(duplicateCheckerService, never()).evaluate(any(), any());
     }
 
     @Test
@@ -330,7 +529,7 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
 
         when(sittingRecordRepository.findRecordsToSubmit(submitSittingRecordRequest,
                                                          hmctsServiceCode))
-            .thenReturn(sittingRecordIds);
+            .thenReturn(sittingRecordIds.stream());
 
         int countSubmitted = sittingRecordService.submitSittingRecords(
             submitSittingRecordRequest,
@@ -370,7 +569,7 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
 
         when(sittingRecordRepository.findRecordsToSubmit(submitSittingRecordRequest,
                                                          hmctsServiceCode))
-            .thenReturn(Collections.emptyList());
+            .thenReturn(Stream.empty());
 
         int countSubmitted = sittingRecordService.submitSittingRecords(
             submitSittingRecordRequest,
@@ -386,5 +585,92 @@ class SittingRecordServiceTest extends BaseEvaluateDuplicate {
             .updateToSubmitted(any());
 
         assertThat(countSubmitted).isZero();
+    }
+
+    @Test
+    void shouldRecordSittingRecordsWhenPotentialDuplicateRecord() throws IOException {
+        long sittingRecordId = 9L;
+        String requestJson = Resources.toString(getResource("singleSittingRecordWithPotentialDuplicate.json"), UTF_8);
+        requestJson = requestJson.replace("<flag>", "true");
+        RecordSittingRecordRequest recordSittingRecordRequest = objectMapper.readValue(
+                requestJson,
+                RecordSittingRecordRequest.class
+        );
+
+        List<SittingRecordWrapper> sittingRecordWrappers =
+                recordSittingRecordRequest.getRecordedSittingRecords().stream()
+                        .map(SittingRecordWrapper::new)
+                        .peek(sittingRecordWrapper -> {
+                            sittingRecordWrapper.setSittingRecordId(sittingRecordId);
+                            sittingRecordWrapper.setErrorCode(POTENTIAL_DUPLICATE_RECORD);
+                        })
+                        .toList();
+        when(sittingRecordRepository.findById(anyLong()))
+            .thenReturn(Optional.of(uk.gov.hmcts.reform.jps.domain.SittingRecord.builder().build()));
+        UserInfo userInfo = UserInfo.builder()
+            .uid(USER_ID)
+            .givenName("Judge")
+            .build();
+        when(securityUtils.getUserInfo()).thenReturn(userInfo);
+
+        sittingRecordService.saveSittingRecords("SSC_ID",
+                sittingRecordWrappers,
+                recordSittingRecordRequest.getRecordedByName(),
+                recordSittingRecordRequest.getRecordedByIdamId());
+
+        verify(sittingRecordRepository, times(2)).save(isA(uk.gov.hmcts.reform.jps.domain.SittingRecord.class));
+    }
+
+    @Test
+    void shouldNotDeleteRecordSittingRecordsWhenPotentialDuplicateRecordIsNotSet() throws IOException {
+        long sittingRecordId = 9L;
+        String requestJson = Resources.toString(getResource("singleSittingRecordWithPotentialDuplicate.json"), UTF_8);
+        requestJson = requestJson.replace("<flag>", "true");
+        RecordSittingRecordRequest recordSittingRecordRequest = objectMapper.readValue(
+                requestJson,
+                RecordSittingRecordRequest.class
+        );
+
+        List<SittingRecordWrapper> sittingRecordWrappers =
+                recordSittingRecordRequest.getRecordedSittingRecords().stream()
+                        .map(SittingRecordWrapper::new)
+                        .peek(sittingRecordWrapper ->
+                            sittingRecordWrapper.setSittingRecordId(sittingRecordId)
+                        )
+                        .toList();
+
+        sittingRecordService.saveSittingRecords("SSC_ID",
+                sittingRecordWrappers,
+                recordSittingRecordRequest.getRecordedByName(),
+                recordSittingRecordRequest.getRecordedByIdamId());
+
+        verify(sittingRecordRepository).save(isA(uk.gov.hmcts.reform.jps.domain.SittingRecord.class));
+    }
+
+    @Test
+    void shouldNotDeleteRecordSittingRecordsWhenPotentialDuplicateRecordButNoReplaceDuplicate() throws IOException {
+        long sittingRecordId = 9L;
+        String requestJson = Resources.toString(getResource("singleSittingRecordWithPotentialDuplicate.json"), UTF_8);
+        requestJson = requestJson.replace("<flag>", "false");
+        RecordSittingRecordRequest recordSittingRecordRequest = objectMapper.readValue(
+                requestJson,
+                RecordSittingRecordRequest.class
+        );
+
+        List<SittingRecordWrapper> sittingRecordWrappers =
+                recordSittingRecordRequest.getRecordedSittingRecords().stream()
+                        .map(SittingRecordWrapper::new)
+                        .peek(sittingRecordWrapper -> {
+                            sittingRecordWrapper.setSittingRecordId(sittingRecordId);
+                            sittingRecordWrapper.setErrorCode(POTENTIAL_DUPLICATE_RECORD);
+                        })
+                        .toList();
+
+        sittingRecordService.saveSittingRecords("SSC_ID",
+                sittingRecordWrappers,
+                recordSittingRecordRequest.getRecordedByName(),
+                recordSittingRecordRequest.getRecordedByIdamId());
+
+        verify(sittingRecordRepository).save(isA(uk.gov.hmcts.reform.jps.domain.SittingRecord.class));
     }
 }
